[gd_scene load_steps=22 format=3 uid="uid://3nw02h1mploy"]

[ext_resource type="Texture2D" uid="uid://dso5mg62dphu3" path="res://asset/visual/UI/HUD_Elements.png" id="1_b65lm"]
[ext_resource type="Script" path="res://resources/menus/interface.gd" id="1_nrw5u"]
[ext_resource type="Theme" uid="uid://dcv5nno7k0rpb" path="res://asset/visual/UI/themes/labelHUD.tres" id="2_iwxg6"]
[ext_resource type="Texture2D" uid="uid://b4ou0oya7s214" path="res://asset/visual/UI/moleWeaponHUD.png" id="10_oaxdx"]

[sub_resource type="AtlasTexture" id="AtlasTexture_afhbj"]
atlas = ExtResource("1_b65lm")
region = Rect2(0, 24, 16, 3)

[sub_resource type="AtlasTexture" id="AtlasTexture_gakfv"]
atlas = ExtResource("1_b65lm")
region = Rect2(0, 24, 16, 3)

[sub_resource type="AtlasTexture" id="AtlasTexture_b26ee"]
atlas = ExtResource("1_b65lm")
region = Rect2(0, 32, 32, 13)

[sub_resource type="AtlasTexture" id="AtlasTexture_vtje4"]
atlas = ExtResource("1_b65lm")
region = Rect2(24, 16, 1, 8)

[sub_resource type="Theme" id="Theme_vo87j"]

[sub_resource type="AtlasTexture" id="AtlasTexture_ef14t"]
atlas = ExtResource("1_b65lm")
region = Rect2(8, 0, 8, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_037f2"]
atlas = ExtResource("1_b65lm")
region = Rect2(8, 8, 8, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_4tewe"]
atlas = ExtResource("1_b65lm")
region = Rect2(8, 16, 8, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_frfuo"]
atlas = ExtResource("1_b65lm")
region = Rect2(0, 0, 8, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_p483p"]
atlas = ExtResource("1_b65lm")
region = Rect2(0, 0, 8, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_xaj0n"]
atlas = ExtResource("1_b65lm")
region = Rect2(0, 0, 8, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_vctjw"]
atlas = ExtResource("1_b65lm")
region = Rect2(24, 16, 1, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_pxcmx"]
atlas = ExtResource("1_b65lm")
region = Rect2(16, 0, 8, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_gyube"]
atlas = ExtResource("1_b65lm")
region = Rect2(16, 8, 8, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_c6wc4"]
atlas = ExtResource("1_b65lm")
region = Rect2(16, 16, 8, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_benp0"]
atlas = ExtResource("1_b65lm")
region = Rect2(24, 0, 8, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_3fqpq"]
atlas = ExtResource("1_b65lm")
region = Rect2(24, 16, 1, 8)

[node name="Interface" type="CanvasLayer"]
script = ExtResource("1_nrw5u")

[node name="Bottom" type="HBoxContainer" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -170.0
offset_top = -84.0
offset_right = 170.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 0
size_flags_horizontal = 4

[node name="VBoxContainer" type="VBoxContainer" parent="Bottom"]
layout_mode = 2
size_flags_horizontal = 4

[node name="dashes" type="HBoxContainer" parent="Bottom/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="dash1" type="TextureRect" parent="Bottom/VBoxContainer/dashes"]
custom_minimum_size = Vector2(106, 25)
layout_mode = 2
texture = SubResource("AtlasTexture_afhbj")
stretch_mode = 4

[node name="dash2" type="TextureRect" parent="Bottom/VBoxContainer/dashes"]
custom_minimum_size = Vector2(106, 25)
layout_mode = 2
texture = SubResource("AtlasTexture_gakfv")
stretch_mode = 4

[node name="Weapon info" type="HBoxContainer" parent="Bottom/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="Ammo" type="VBoxContainer" parent="Bottom/VBoxContainer/Weapon info"]
layout_mode = 2
size_flags_vertical = 4

[node name="Current Magazine" type="Label" parent="Bottom/VBoxContainer/Weapon info/Ammo"]
layout_mode = 2
size_flags_horizontal = 8
theme = ExtResource("2_iwxg6")
text = "##"

[node name="Remaining ammo" type="Label" parent="Bottom/VBoxContainer/Weapon info/Ammo"]
layout_mode = 2
size_flags_horizontal = 8
theme = ExtResource("2_iwxg6")
text = "##"

[node name="Weapon  Background" type="TextureRect" parent="Bottom/VBoxContainer/Weapon info"]
custom_minimum_size = Vector2(166, 0)
layout_mode = 2
texture = SubResource("AtlasTexture_b26ee")
stretch_mode = 4

[node name="TextureRect" type="TextureRect" parent="Bottom/VBoxContainer/Weapon info/Weapon  Background"]
custom_minimum_size = Vector2(122, 0)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("10_oaxdx")
stretch_mode = 4

[node name="line" type="TextureRect" parent="Bottom/VBoxContainer/Weapon info"]
custom_minimum_size = Vector2(6, 0)
layout_mode = 2
texture = SubResource("AtlasTexture_vtje4")

[node name="Weapon Upgrades" type="HBoxContainer" parent="Bottom/VBoxContainer/Weapon info"]
layout_mode = 2
theme = SubResource("Theme_vo87j")

[node name="upgrade 1" type="VBoxContainer" parent="Bottom/VBoxContainer/Weapon info/Weapon Upgrades"]
layout_mode = 2

[node name="icon" type="TextureRect" parent="Bottom/VBoxContainer/Weapon info/Weapon Upgrades/upgrade 1"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
size_flags_horizontal = 4
texture = SubResource("AtlasTexture_ef14t")
stretch_mode = 4

[node name="anzahl" type="HBoxContainer" parent="Bottom/VBoxContainer/Weapon info/Weapon Upgrades/upgrade 1"]
layout_mode = 2
size_flags_horizontal = 4

[node name="x" type="Label" parent="Bottom/VBoxContainer/Weapon info/Weapon Upgrades/upgrade 1/anzahl"]
layout_mode = 2
size_flags_horizontal = 4
theme = ExtResource("2_iwxg6")
text = "x"

[node name="weapUp1" type="Label" parent="Bottom/VBoxContainer/Weapon info/Weapon Upgrades/upgrade 1/anzahl"]
layout_mode = 2
size_flags_horizontal = 4
theme = ExtResource("2_iwxg6")
text = "0"

[node name="upgrade 2" type="VBoxContainer" parent="Bottom/VBoxContainer/Weapon info/Weapon Upgrades"]
layout_mode = 2

[node name="icon" type="TextureRect" parent="Bottom/VBoxContainer/Weapon info/Weapon Upgrades/upgrade 2"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
size_flags_horizontal = 4
texture = SubResource("AtlasTexture_037f2")
stretch_mode = 4

[node name="anzahl" type="HBoxContainer" parent="Bottom/VBoxContainer/Weapon info/Weapon Upgrades/upgrade 2"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="x" type="Label" parent="Bottom/VBoxContainer/Weapon info/Weapon Upgrades/upgrade 2/anzahl"]
layout_mode = 2
size_flags_horizontal = 4
theme = ExtResource("2_iwxg6")
text = "x"

[node name="weapUp2" type="Label" parent="Bottom/VBoxContainer/Weapon info/Weapon Upgrades/upgrade 2/anzahl"]
layout_mode = 2
size_flags_horizontal = 4
theme = ExtResource("2_iwxg6")
text = "0"

[node name="upgrade 3" type="VBoxContainer" parent="Bottom/VBoxContainer/Weapon info/Weapon Upgrades"]
layout_mode = 2

[node name="icon" type="TextureRect" parent="Bottom/VBoxContainer/Weapon info/Weapon Upgrades/upgrade 3"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
size_flags_horizontal = 4
texture = SubResource("AtlasTexture_4tewe")
stretch_mode = 4

[node name="anzahl" type="HBoxContainer" parent="Bottom/VBoxContainer/Weapon info/Weapon Upgrades/upgrade 3"]
layout_mode = 2
size_flags_horizontal = 4

[node name="x" type="Label" parent="Bottom/VBoxContainer/Weapon info/Weapon Upgrades/upgrade 3/anzahl"]
layout_mode = 2
size_flags_horizontal = 4
theme = ExtResource("2_iwxg6")
text = "x"

[node name="weapUp3" type="Label" parent="Bottom/VBoxContainer/Weapon info/Weapon Upgrades/upgrade 3/anzahl"]
layout_mode = 2
size_flags_horizontal = 4
theme = ExtResource("2_iwxg6")
text = "0"

[node name="Left" type="HBoxContainer" parent="."]
offset_left = 10.0
offset_top = 10.0
offset_right = 192.0
offset_bottom = 138.0

[node name="Health" type="VBoxContainer" parent="Left"]
layout_mode = 2

[node name="heart1" type="TextureRect" parent="Left/Health"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
texture = SubResource("AtlasTexture_frfuo")
stretch_mode = 1

[node name="heart2" type="TextureRect" parent="Left/Health"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
texture = SubResource("AtlasTexture_p483p")

[node name="heart3" type="TextureRect" parent="Left/Health"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
texture = SubResource("AtlasTexture_xaj0n")

[node name="line" type="TextureRect" parent="Left"]
custom_minimum_size = Vector2(6, 5)
layout_mode = 2
texture = SubResource("AtlasTexture_vctjw")

[node name="Player Upgrades" type="HBoxContainer" parent="Left"]
layout_mode = 2

[node name="upgrade 1" type="VBoxContainer" parent="Left/Player Upgrades"]
layout_mode = 2

[node name="icon" type="TextureRect" parent="Left/Player Upgrades/upgrade 1"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
size_flags_horizontal = 4
texture = SubResource("AtlasTexture_pxcmx")
stretch_mode = 4

[node name="anzahl" type="HBoxContainer" parent="Left/Player Upgrades/upgrade 1"]
layout_mode = 2
size_flags_horizontal = 4

[node name="x" type="Label" parent="Left/Player Upgrades/upgrade 1/anzahl"]
layout_mode = 2
size_flags_horizontal = 4
theme = ExtResource("2_iwxg6")
text = "x"

[node name="plUp1" type="Label" parent="Left/Player Upgrades/upgrade 1/anzahl"]
layout_mode = 2
size_flags_horizontal = 4
theme = ExtResource("2_iwxg6")
text = "0"

[node name="upgrade 2" type="VBoxContainer" parent="Left/Player Upgrades"]
layout_mode = 2

[node name="icon" type="TextureRect" parent="Left/Player Upgrades/upgrade 2"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
size_flags_horizontal = 4
texture = SubResource("AtlasTexture_gyube")
stretch_mode = 4

[node name="anzahl" type="HBoxContainer" parent="Left/Player Upgrades/upgrade 2"]
layout_mode = 2
size_flags_horizontal = 4

[node name="x" type="Label" parent="Left/Player Upgrades/upgrade 2/anzahl"]
layout_mode = 2
size_flags_horizontal = 4
theme = ExtResource("2_iwxg6")
text = "x"

[node name="plUp2" type="Label" parent="Left/Player Upgrades/upgrade 2/anzahl"]
layout_mode = 2
size_flags_horizontal = 4
theme = ExtResource("2_iwxg6")
text = "0"

[node name="upgrade 3" type="VBoxContainer" parent="Left/Player Upgrades"]
layout_mode = 2

[node name="icon" type="TextureRect" parent="Left/Player Upgrades/upgrade 3"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
size_flags_horizontal = 4
texture = SubResource("AtlasTexture_c6wc4")
stretch_mode = 4

[node name="anzahl" type="HBoxContainer" parent="Left/Player Upgrades/upgrade 3"]
layout_mode = 2
size_flags_horizontal = 4

[node name="x" type="Label" parent="Left/Player Upgrades/upgrade 3/anzahl"]
layout_mode = 2
size_flags_horizontal = 4
theme = ExtResource("2_iwxg6")
text = "x"

[node name="plUp3" type="Label" parent="Left/Player Upgrades/upgrade 3/anzahl"]
layout_mode = 2
size_flags_horizontal = 4
theme = ExtResource("2_iwxg6")
text = "0"

[node name="Right" type="HBoxContainer" parent="."]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -109.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = 90.0
grow_horizontal = 0
size_flags_horizontal = 0

[node name="Ore" type="VBoxContainer" parent="Right"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0

[node name="icon" type="TextureRect" parent="Right/Ore"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
size_flags_horizontal = 4
texture = SubResource("AtlasTexture_benp0")
stretch_mode = 4

[node name="anzahl" type="HBoxContainer" parent="Right/Ore"]
layout_mode = 2
size_flags_horizontal = 4

[node name="x" type="Label" parent="Right/Ore/anzahl"]
layout_mode = 2
size_flags_horizontal = 4
theme = ExtResource("2_iwxg6")
text = "x"

[node name="ore" type="Label" parent="Right/Ore/anzahl"]
layout_mode = 2
size_flags_horizontal = 4
theme = ExtResource("2_iwxg6")
text = "0"

[node name="line" type="TextureRect" parent="Right"]
custom_minimum_size = Vector2(6, 0)
layout_mode = 2
texture = SubResource("AtlasTexture_3fqpq")

[node name="Mutators" type="VBoxContainer" parent="Right"]
layout_mode = 2
size_flags_vertical = 0
